# onyx-engine

./: LICENSE  Pipfile  README.md  pyproject.toml
examples/: basics.py  scenes.py
onyx/: __init__.py  app.py  error.py  scene.py
onyx/component/: component.py  rendered_component.py
onyx/example/: __main__.py
tests/: test_app.py
